--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,25 @@
     
     <div class="formContainer">
         <h1>Rifa anual de autos</h1>
-        <h3>Bienvenidos, por favor ingrese sus datos para participar</h3>
+        <h3>Bienvenidos, por favor ingrese sus datos para participar. Solo valido para Argentina, Uruguay y Brasil</h3>
+        <h3>Los resultados se mostraran despues haber vendido todos los numeros</h3>
         <form action="/rifa" method="POST">
 
             <label for="nombre">Nombre</label>
-            <input type="text" name="nombre" id="nombre">
+            <input type="text" name="nombre" id="nombre" required>
             
             <label for="apellido">Apellido</label>
-            <input type="text" name="apellido" id="apellido">
+            <input type="text" name="apellido" id="apellido" required>
 
-            <label for="numero">Numero a elegir (1 a 100)</label>
-            <input type="number" name="numero" id="numero"  min= 1 max = 100>
+            <label for="numero">Numero a elegir (1 al 5)</label>
+            <input type="number" name="numero" id="numero"  min= 1 max = 5 required>
+
+            <label for="pais">Pais</label>
+            <select name="pais">
+                <option value=1 selected>Argentina</option>
+                <option value=2>Uruguay</option>
+                <option value=3>Brasil</option>
+              </select>
 
             <input type="submit" name="submit" id="submit">
         </form>
