--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h4>Solo valido para Argentina, Uruguay y Brasil</h4>
 
     <div class="formContainer">
-        <form action="/rifa" method="POST">
+        <form class="formularioRifa" action="/rifa" method="POST">
    
             <label for="nombre">Nombre</label>
             <input type="text" name="nombre" id="nombre" pattern="[A-Za-z]+" required>
